# speakeasy-examples

acme-todo/: README.md  acmetodo.yaml  app.py
optimizing-your-mcp-openapi/: README.md
simple-slack-mcp-server/: README.md  generate_openapi.py  openapi.json  openapi.yaml  pyproject.toml
simple-slack-mcp-server/app/: main.py
slack-mcp-server-api/: .env.example  .gitignore  README.md  gen.sh  generate_openapi.py  gram.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
slack-mcp-server-api/app/: __init__.py  main.py  social_agent.py
slack-mcp-server-api/tests/: test_main.py
