[project]
name = "slack-mcp-server"
version = "0.1.0"
description = "A FastAPI server that integrates with Slack API for message search and thread operations, optimized for getgram MCP servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all]==0.115.5",
    "slack-sdk==3.29.0",
    "python-dotenv==1.0.1",
    "pydantic>=2.11.2",
    "uvicorn[standard]==0.32.1",
    "openai-agents>=0.2.4",
    "gram-ai>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
] 
